--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,20 @@
+/* ================================
+THE-BODY SETTING 
+================================ */
 body {
 
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 15px;
 }
 
+html,body {
+  margin: 0
+}
+
+/* ===================================
+THE-HEADER SETTING
+=================================== */
 
 .site-identity {
     display: block;
@@ -16,3 +26,62 @@ body {
     
 }
 
+/* =========================================
+NEW-CODE
+========================================= */
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    overflow-y: auto;
+  }
+  
+  .top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: auto;
+    background: black;
+    color: white;
+  }
+  
+  .main_center {
+    margin: 30px 0;
+  }
+  
+  .middle {
+    flex-grow: 1;
+    overflow: auto;
+  }
+  
+  .article {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  
+  .swipe-features {
+      display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100vh;
+    overflow-x: scroll;
+    
+  }
+  
+  .middle-bottom {
+    background: red;
+  }
+  
+  .bottom {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background: black;
+    color: white;
+  }
+
+  /* ==================================
+  ================================== */
